fixed some error

--- a/asset/index-login.html
+++ b/asset/index-login.html
@@ -105,7 +105,7 @@
           _div.innerHTML = `
   <div>
       <li>Email${i + 1}: ${val.email}</li>
-              <li>password${i}: ${val.pass}</li>
+              <li>password${i+1}: ${val.pass}</li>
       </div>
   `;
           _account.appendChild(_div);
